--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -2,6 +2,8 @@ name: Release
 
 on:
   push:
+    branches:
+      - master
     tags:
       - 'v*'
 
@@ -29,6 +31,18 @@ jobs:
         with:
           go-version: '1.23'
 
+      - name: Determine version
+        id: version
+        run: |
+          if [[ "${{ github.ref }}" == refs/tags/* ]]; then
+            echo "version=${{ github.ref_name }}" >> "$GITHUB_OUTPUT"
+          else
+            BUILD=$(printf '%04d' "${{ github.run_number }}")
+            DATE=$(date -u +%Y%m%d)
+            SHA=${GITHUB_SHA::7}
+            echo "version=dev-${BUILD}-${DATE}-${SHA}" >> "$GITHUB_OUTPUT"
+          fi
+
       - name: Build
         env:
           GOOS: ${{ matrix.goos }}
@@ -38,7 +52,7 @@ jobs:
           BINARY=warp-proxies-${{ matrix.goos }}-${{ matrix.goarch }}
           go build -tags "with_wireguard,with_gvisor,with_clash_api" \
             -trimpath \
-            -ldflags "-s -w -X main.version=${{ github.ref_name }}" \
+            -ldflags "-s -w -X main.version=${{ steps.version.outputs.version }}" \
             -o ${BINARY} .
 
       - uses: actions/upload-artifact@v4
@@ -55,8 +69,23 @@ jobs:
           path: artifacts
           merge-multiple: true
 
-      - name: Create Release
+      - name: Create Release (tag)
+        if: startsWith(github.ref, 'refs/tags/')
         uses: softprops/action-gh-release@v2
         with:
           files: artifacts/*
           generate_release_notes: true
+
+      - name: Update dev pre-release
+        if: "!startsWith(github.ref, 'refs/tags/')"
+        uses: softprops/action-gh-release@v2
+        with:
+          tag_name: dev
+          name: "Dev Build (${GITHUB_SHA::7})"
+          body: |
+            Automated pre-release from `master` branch.
+
+            Commit: ${{ github.sha }}
+          files: artifacts/*
+          prerelease: true
+          make_latest: false
