--- a/.gitignore
+++ b/.gitignore
@@ -28,8 +28,15 @@ go.work.sum
 .env
 
 # Editor/IDE
-# .idea/
-# .vscode/
+.idea/
+.vscode/
+*.swp
+*.swo
+*~
+
+# OS files
+.DS_Store
+Thumbs.db
 
 # Project binaries
 warp-proxies
@@ -37,3 +44,8 @@ warp-proxies-*
 
 # Data directory
 data/
+
+# Database/cache files
+*.db
+*.sqlite
+*.sqlite3
